fixed z-index property

--- a/src/pages/Home/section/About/About.scss
+++ b/src/pages/Home/section/About/About.scss
@@ -8,6 +8,7 @@
   transition: 1s ease-in;
   h2 {
     margin-bottom: 6rem;
+    z-index: 3;
   }
   .main-content {
     text-align: center;
